ProyectoFinal/generated/MiniGuionParser.py
# Generated from MiniGuion.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MiniGuionParser ( Parser ):

    grammarFileName = "MiniGuion.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'escena'", "'{'", "'}'", "'decir'", "';'", 
                     "'opcion'", "'ir_a'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "ID", "STRING", "WS", "COMMENT" ]

    RULE_program = 0
    RULE_scene = 1
    RULE_dialogue = 2
    RULE_decir_stmt = 3
    RULE_opcion_stmt = 4

    ruleNames =  [ "program", "scene", "dialogue", "decir_stmt", "opcion_stmt" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    ID=8
    STRING=9
    WS=10
    COMMENT=11

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MiniGuionParser.EOF, 0)

        def scene(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniGuionParser.SceneContext)
            else:
                return self.getTypedRuleContext(MiniGuionParser.SceneContext,i)


        def getRuleIndex(self):
            return MiniGuionParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MiniGuionParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 11 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 10
                self.scene()
                self.state = 13 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==1):
                    break

            self.state = 15
            self.match(MiniGuionParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SceneContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MiniGuionParser.ID, 0)

        def dialogue(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniGuionParser.DialogueContext)
            else:
                return self.getTypedRuleContext(MiniGuionParser.DialogueContext,i)


        def getRuleIndex(self):
            return MiniGuionParser.RULE_scene

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScene" ):
                listener.enterScene(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScene" ):
                listener.exitScene(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitScene" ):
                return visitor.visitScene(self)
            else:
                return visitor.visitChildren(self)




    def scene(self):

        localctx = MiniGuionParser.SceneContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_scene)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 17
            self.match(MiniGuionParser.T__0)
            self.state = 18
            self.match(MiniGuionParser.ID)
            self.state = 19
            self.match(MiniGuionParser.T__1)
            self.state = 21 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 20
                self.dialogue()
                self.state = 23 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==4 or _la==6):
                    break

            self.state = 25
            self.match(MiniGuionParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DialogueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decir_stmt(self):
            return self.getTypedRuleContext(MiniGuionParser.Decir_stmtContext,0)


        def opcion_stmt(self):
            return self.getTypedRuleContext(MiniGuionParser.Opcion_stmtContext,0)


        def getRuleIndex(self):
            return MiniGuionParser.RULE_dialogue

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDialogue" ):
                listener.enterDialogue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDialogue" ):
                listener.exitDialogue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDialogue" ):
                return visitor.visitDialogue(self)
            else:
                return visitor.visitChildren(self)




    def dialogue(self):

        localctx = MiniGuionParser.DialogueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_dialogue)
        try:
            self.state = 29
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 27
                self.decir_stmt()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 28
                self.opcion_stmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Decir_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(MiniGuionParser.STRING, 0)

        def getRuleIndex(self):
            return MiniGuionParser.RULE_decir_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecir_stmt" ):
                listener.enterDecir_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecir_stmt" ):
                listener.exitDecir_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecir_stmt" ):
                return visitor.visitDecir_stmt(self)
            else:
                return visitor.visitChildren(self)




    def decir_stmt(self):

        localctx = MiniGuionParser.Decir_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_decir_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31
            self.match(MiniGuionParser.T__3)
            self.state = 32
            self.match(MiniGuionParser.STRING)
            self.state = 33
            self.match(MiniGuionParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Opcion_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(MiniGuionParser.STRING, 0)

        def ID(self):
            return self.getToken(MiniGuionParser.ID, 0)

        def getRuleIndex(self):
            return MiniGuionParser.RULE_opcion_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOpcion_stmt" ):
                listener.enterOpcion_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOpcion_stmt" ):
                listener.exitOpcion_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOpcion_stmt" ):
                return visitor.visitOpcion_stmt(self)
            else:
                return visitor.visitChildren(self)




    def opcion_stmt(self):

        localctx = MiniGuionParser.Opcion_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_opcion_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self.match(MiniGuionParser.T__5)
            self.state = 36
            self.match(MiniGuionParser.STRING)
            self.state = 37
            self.match(MiniGuionParser.T__6)
            self.state = 38
            self.match(MiniGuionParser.ID)
            self.state = 39
            self.match(MiniGuionParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





